2008-11-05  Mark D. Baushke  <mdb@gnu.org>

	*diff.c (diff): Use SEND_FORCE on files when a -k option is used
	with diff to avoid client/server not finding the requested file.
	* sanity.sh (keyword): Add tests for this.

	* checkout.c (checkout): For multiroot checkout/update operations,
	do not assume that the static join_rev1 and join_rev2 strings will
	not be seen again with another repository.
	* update.c (update): Ditto.
	* commit.c (commit): For multiroot commits with -F logmessage
	do not generate "cannot specify both a message and a log file"
	errors. Track the use of -m as an argument explicitly.
	(finaladd): API change to pass the saved_message.
	(check_fileproc, commit_fileproc, commit_filesdoneproc): Pass the
	saved_message via the callerdat block.
	(commit_direntproc): Ditto.
	* sanity.sh (multiroot-{commit-2,update-join-{1,2},admin-{1,2,3,4}}):
	Do commits with -F logmessage to test above and also look at other
	broken behavior which needs to be fixed. There are some FIXME
	tests here which should be addressed.

2008-10-15  Derek R. Price  <derek@ximbiot.com>

	* checkout.c (findslash): Declare inputs const.  Use ISSLASH().

2008-10-02  Derek R. Price  <derek@ximbiot.com>

	* history.c: Some cleanup.
	(expand_modules): Removed this stub function.
	(get_history_log_name): Don't return const since it is freshly
	allocated.
	(history_write): Add version number to history records.  Use tag
	fields like other record types.
	(fill_hrec): Load version number & postprocess history records as
	needed.  Zero records with memset.
	(read_hrecs_file): Don't zero records redundantly with fill_hrec().
	(report_hrecs): Find tag data in the same place as other record types.
	* sanity.sh (basic2-64): Expect new tag records.
	* tag.c: Some cleanup.
	(cvstag): Move history log call to...
	(tag_filesdoneproc): ...here, where we have more information.

	* modules.c (my_module): Clean up TRACE.
	* subr.h [NULL2DOT, NULL2MT]: Add parens for safety.
